--- a/2/3/bar.html
+++ b/2/3/bar.html
@@ -17,9 +17,16 @@
 
    </a>
    <section class="sign-in">
+    <button>
+
 <a href="">login</a>
 !
+
+
 <a href="">register</a>
+
+
+    </button>
 
 
    </section>
