--- a/worl-1/work.html
+++ b/worl-1/work.html
@@ -6,6 +6,7 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./work.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
   <body>
     
@@ -240,6 +241,7 @@
   <img src="https://ca.slack-edge.com/TMPTG1GNP-U01RQF1QAMD-cc0e1c7eafb3-512" alt="" width="250px" class="rounded-circle mb-3">
   <H1>Harvey Watson </H1>
   <p>Mobile developer</p>
+
 </div>
 
 
